--- a/styles/poketypes.css
+++ b/styles/poketypes.css
@@ -60,6 +60,7 @@ body {
     padding-right: 3vw;
     padding-top: 9vh;
     border-radius: 10px;
+    border-radius: 1.5vmin;
     white-space: nowrap;
     
     background: #FFF;
@@ -95,6 +96,10 @@ body {
 #smallinstructions {
     font-size: 3.98vh;
 }
+.twitlink {
+    color: #B3C2DE;
+    text-decoration: none;
+}
 
 /* Pokémon types */
 
@@ -102,6 +107,7 @@ body {
     width: 100%;
     height: 100%;
     border-radius: 5px;
+    border-radius: 0.75vmin;
     padding: 10px;
     background-color: #FFF6D0;
     
@@ -127,6 +133,7 @@ body {
     width: 100px;
     height: 1.15em;
     border-radius: 4px;
+    border-radius: 0.6vmin;
     padding: 2px;
     padding-top: 3px;
     
@@ -142,6 +149,9 @@ body {
     width: 100px;
     border-radius: 4px;
     background-color: #E3F2FF;
+}
+#choicesummary > tbody > tr > td:nth-child(2) > div {
+    border-radius: 4px;
 }
 
 .normal {
